--- a/.github/workflows/gitops.yaml
+++ b/.github/workflows/gitops.yaml
@@ -18,7 +18,7 @@ jobs:
             cp argocd-app.tmpl apps/crossplane-deeps-demo.yaml
             yq --inplace ".metadata.name = \"crossplane-deeps-demo\"" apps/crossplane-deeps-demo.yaml
             yq --inplace ".spec.source.repoURL = \"https://github.com/$GITHUB_REPOSITORY\"" apps/crossplane-deeps-demo.yaml
-            yq --inplace ".spec.destination.namespace = \"deeps\"" apps/crossplane-deeps-demo.yaml
+            yq --inplace ".spec.destination.namespace = \"git-repos\"" apps/crossplane-deeps-demo.yaml
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
             git add .
