--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
   build-container-image:
     runs-on: ubuntu-latest
     env:
-      TAG: 0.0.${{ github.run_number }}
+      TAG: 0.0.$${{ github.run_number }}
       FORCE_COLOR: 1
     steps:
       - uses: earthly/actions-setup@v1
